--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^14.2.4",
     "@angular/platform-browser-dynamic": "^14.2.4",
     "@angular/router": "^14.2.4",
+    "@auth0/angular-jwt": "^5.1.0",
     "aos": "^2.3.4",
     "chart.js": "^3.9.1",
     "ng2-pdf-viewer": "^9.1.2",
